updating navbar using media queries for 1000px.

--- a/style.css
+++ b/style.css
@@ -1,22 +1,29 @@
 *{
     margin:0px;
     font-family:arial;
-    border:border-box;
+    box-sizing:border-box;
+    scroll-behavior:smooth;
 }
 .navbar{
     background-color:#0f1111;
-    height:60px;
+    max-height:60px;
     min-height:50px;
-    max-width:100vw;
+    width:100%;
+    max-width:100%;
+    min-width:auto;
     color:#ffffff;
     display:flex;
     align-items:center;
-justify-content: space-evenly;
-}
+justify-content:space-between;
+object-fit:cover;
+box-sizing:border-box;}
 .navbar-logo{
     height:50px;
     width:7vw;
+    max-width:120px;
+    min-width:90px;
     margin-left:10px;
+    max-width:115px;
 }
 .logo{
     background-image:url("amazon_logo.png");
@@ -29,21 +36,27 @@ justify-content: space-evenly;
     border:1px solid white;
 }/*box 2*/
 .nav-address{
-    height:35px;
+    height:50px;
     width:6vw;
     padding-top:10px;
     padding-bottom:5px;
     padding-left:5px;
+    min-width:88px;
+    max-width:90px;
+    display:flex;
+    align-items:center;
+    flex-wrap:wrap;
+    justify-content:left;
 }
+
 .country{
     color:#ffffff;
     font-size:0.85rem;
 }.deliver_to{
     color:#cccccc;
-    min-width:90px;
-    max-width:150px;
     font-size: 0.75rem;
     margin-left:12px;
+    white-space:nowrap;
 }.location-icon{
     display:flex;
     align-items: center;
@@ -59,6 +72,7 @@ border:2px solid transparent;
 margin-left:5px;
 margin-right:5px;
 width:60vw;
+min-width:440px;
 }.search-bar:hover{
     border:2px solid #faa940;
 }
@@ -101,43 +115,87 @@ width:60vw;
 }
 .language{
     display:flex;
+    max-width:60px;
+    min-width:50px;
     align-items:end;
     justify-content:center;
-    height:40px;
+    height:50px;
     width:4vw;
     padding-bottom:10px;
     font-size:0.85rem;
     font-weight:700;
 }.cart i{
     font-size:30px;
-}.cart{
+}.cart p{
+    padding-top:12px;
+    padding-right:2px;
+}
+.cart{
    font-size:0.85rem;
    white-space:nowrap;
    font-weight:700;
-   height:35px;
-   width:6%;
+   height:50px;
+   width:6vw;
+   display:flex;
    padding-top:10px;
    padding-bottom:5px;
    padding-left:7px;
-   margin-right:10px
+   padding-right:5px;
+   margin-right:10px;
+   min-width:75px;
+   max-width:100px;
 }.sign-in{
-    height:35px;
+    height:50px;
     white-space: nowrap;
-    width:9%;
+    width:9vw;
     padding-top:10px;
     padding-bottom:5px;
     padding-left:7px;
+    max-width:120px;
+    min-width:110px;
 }.return{
-    height:35px;
-    width:6%;
+    height:50px;
+    width:6vw;
     padding-top:10px;
     padding-bottom:5px;
     padding-left:7px;
     white-space:nowrap;
+    max-width:110px;
+    min-width:70px;
+}@media (max-width: 1000px) {
+    .search-bar {
+        min-width:320px;
+        margin:0px;
+    }.navbar-logo{
+        min-width:90px;
+        width:5vw;
+        margin:auto 0;
+    }
+    .cart {
+        min-width:30px;
+        font-size: 0.8rem;
+        padding-left:2px;
+        margin-right:3px;
+    }.cart p{
+       display:none;
+    }
+    .nav-address{
+       min-width:80px;
+       padding:auto 1px;
+    }.sign-in{
+        min-width:110px;
+        padding:auto 2px;
+    }.language{
+        min-width:45px;
+        padding:auto 1px;
+        margin:0;
+    }
 }/* Panel*/
 .panel{
     height:39px;
-    width:100vw;
+    width:100%;
+    max-width:100vw;
+    min-width:320px;
     background-color:#232f3e;
     display:flex;  
     font-size:0.85rem;
@@ -152,7 +210,7 @@ width:60vw;
    
 }.panel-all{
     padding-right:10px;
-    height:30px;
+    height:39px;
     padding-top:9px;
     margin-left:10px;
     padding-left:5px;
@@ -161,7 +219,7 @@ width:60vw;
 }.panel-others p{
     padding-left:10px;
     padding-right:10px;
-    height:29px;  
+    height:39px;  
     padding-top:10px;
     white-space:nowrap;
 }/* Hero section*/
@@ -190,16 +248,18 @@ width:60vw;
 }
 .shop-section{
     display:flex;
-    height:1000px;
+    height:40%;
     justify-content:space-evenly;
     background-color:rgb(231, 231, 228);
     flex-wrap:wrap;
 }.box{
-    width:17.88%;
-    height:400px;
+    width:max(310px,21.77%);
+    height:max(400px,20.25rem);
     margin-bottom:3%;
     padding:2%;
     background-color:#ffffff;
+}.box h2{
+    font-size:1.2rem;
 }.box1-image{
     background-image:url("box1_image.jpg");
     height:80%;
@@ -251,6 +311,8 @@ width:60vw;
 }
 .box p{
     color:#2162a1;
+}@media (max-width: 1000px) {
+    
 }
 .footer-panel1{
     height:50px;
